--- a/playbooks/default-server-setup.yml
+++ b/playbooks/default-server-setup.yml
@@ -58,4 +58,12 @@
             remote_src: yes
         - name: Restart service   
           ansible.builtin.command: systemctl restart fail2ban
-      become: true        
+      become: true 
+
+    - name: Resize volume to use all available space
+      community.general.lvol:
+        vg: ubuntu-vg
+        lv: ubuntu-lv
+        size: +100%FREE
+        resizefs: true
+      become: true
